--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
