--- a/package.json
+++ b/package.json
@@ -10,5 +10,5 @@
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "webpack-dev-server": "^3.11.0"
   },
-  "version": "0.1.0",
+  "version": "0.1.0"
 }
